--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,8 @@
         <div id="menu">
           <ul>
             <li><a href="/">Home</a></li>
-            {% for my_page in site.pages %}
+            {% assign sorted_pages = site.pages | sort:"weight" %}
+            {% for my_page in sorted_pages %}
             {% if my_page.title %}
             <li><a href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a></li>
             {% endif %}
